--- a/sass/blocks/_stock-form-select.sass
+++ b/sass/blocks/_stock-form-select.sass
@@ -168,6 +168,7 @@ $block: ".stock-form-select"
           padding-top: 20px
           padding-bottom: 20px
           border-right: none
+          border-bottom: 1px solid #d3d3d3
 
       &::-ms-expand
         display: none
